--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,12 +12,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Start containers
         run: docker-compose -f "docker-compose.yml" up -d --build
-      - uses: cygnetdigital/wait_for_response@v2.0.0
+      - uses: GuillaumeFalourd/wait-sleep-action@v1
         with:
-          url: "http://localhost:8080"
-          responseCode: "200"
-          timeout: 900000
-          interval: 500
+          time: "3m" # for 1 minute
       - uses: actions/setup-node@v3
         with:
           node-version: 16
