--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       ADMIN_PASSWD: test_shop
     networks:
       - prestashop_network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   mailpit:
     image: axllent/mailpit
     container_name: mailpit
@@ -39,5 +41,8 @@ services:
       - 1025:1025
     networks:
       - prestashop_network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
 networks:
   prestashop_network:
