--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,9 +12,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: Start containers
         run: docker-compose -f "docker-compose.yml" up -d --build
-      - uses: GuillaumeFalourd/wait-sleep-action@v1
+      - uses: cygnetdigital/wait_for_response@v2.0.0
         with:
-          time: "5m" # for 1 minute
+          url: "http://localhost:8080/adminTest"
+          responseCode: "200"
+          timeout: 180000
+          interval: 500
       - uses: actions/setup-node@v3
         with:
           node-version: 16
