--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,7 +18,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+        run: npx playwright install --with-deps chromium
+      - uses: cygnetdigital/wait_for_response@v2.0.0
+        with:
+          url: "http://prestashop:8080/adminTest"
+          responseCode: "200"
+          timeout: 180000
+          interval: 500
       - name: Run Playwright tests
         run: npx playwright test
       - uses: actions/upload-artifact@v3
