--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,6 +19,12 @@ jobs:
         run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps chromium
+      - uses: cygnetdigital/wait_for_response@v2.0.0
+        with:
+          url: "http://localhost:8080/adminTest/"
+          responseCode: "302,301"
+          timeout: 180000
+          interval: 500
       - name: Run Playwright tests
         run: npx playwright test
       - uses: actions/upload-artifact@v3
