Changed waiting URL

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,8 +21,8 @@ jobs:
         run: npx playwright install --with-deps chromium
       - uses: cygnetdigital/wait_for_response@v2.0.0
         with:
-          url: "http://localhost:8080/adminTest/"
-          responseCode: "302"
+          url: "http://localhost:8080/"
+          responseCode: "200"
           timeout: 360000
           interval: 500
       - name: Run Playwright tests
